package cli

type Argument struct {
	Name  string
	Value string
}
