classDiagram
    
    class Command {
        <<abstract>>
        +execute(Argument[]) void
    }

    class CommandRegistry {
        -commands: Map<string, Command>
        +registerCommand(name: string, command: Command) void
        +executeCommand(name: string) void
    }

    class Argument {
        - name: string
        - value: string
    }

    class ArgumentParser {
        + parse(query: string) Argument[]
    }

    class Parser {
        +parse(query: string) Command
    }


    CommandRegistry --> Command
    Command --> Argument
    ArgumentParser --> Argument
    Parser --> CommandRegistry
    Parser --> ArgumentParser